--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,6 @@
 	path = pmlb
 	url = git@github.com:krzysztof-kacprzyk/pmlb.git
 	branch = share
+[submodule "gplearn"]
+	path = gplearn
+	url = git@github.com:krzysztof-kacprzyk/gplearn-share.git
