--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "gplearn"]
 	path = gplearn
-	url = git@github.com:krzysztof-kacprzyk/gplearn-share.git
+	url = https://github.com/krzysztof-kacprzyk/gplearn-share.git
