--- a/environment.yml
+++ b/environment.yml
@@ -1,27 +1,28 @@
-name: share
+name: shares
 
 dependencies:
-    - python=3.9
-    - jupyter
-    - numpy
-    - pandas
-    - matplotlib
-    - scikit-learn
-    - tensorboard
-    - scipy
-    - pytorch
-    # - torchvision
-    # - torchaudio
-    # - pytorch-cuda=11.7
-    - tensorboard
-    # - py-xgboost
-    - pytorch-lightning
-    - pip
+    - python=3.9.16
+    - jupyter=1.0.0
+    - numpy=1.23.5
+    - optuna=3.4.0
+    - pandas=1.5.3
+    - matplotlib=3.6.3
+    - py-xgboost=1.7.1
+    - pygam=0.8.0
+    - pytorch=1.13.1
+    - pytorch-cuda=11.7
+    - scikit-learn=1.2.0
+    - scipy=1.10.0
+    - tabulate=0.9.0
+    - tensorboard=2.11.2
+    - pip=22.3.1
     - pip:
-        # - julia
-        # - pysr
-        - -e ./pmlb
-        # - -e ./nam
+        - interpret==0.3.0
+        - julia==0.6.0
+        - pmlb==1.0.1.post3
+        - pysr==0.11.12
+        - pytorch-lightning==1.9.0
+        - sympy==1.11.1
 
 channels:
     - defaults
